# Gutenberg-Fingerprint

./: .gitignore  CLAUDE.md  README.md  dbt_project.yml  packages.yml  profiles.yml  pyproject.toml
.claude/agents/: code-decommenter.md  text-trimmer.md
.github/workflows/: sync-fabric-dbt.yml
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: log_run_results.sql
dbt/seeds/: seed_authors.csv  seed_metrics.csv
dbt/tests/: assert_work_has_all_metric_concepts.sql
docs/: Author-Style-Summaries.md  Idiosyncratic-Works.md  Personal-Notes.md  Project-Outline.md  fabric_gutenberg_stylometrics_project.md
docs/reference/: azure.md  dbt-core.md  dbt-duckdb.md  duckdb.md  evidence.md  fabric.md  python-rules.md  spacy.md  star-schema.md
evidence/: .gitignore  evidence.config.yaml  package-lock.json  package.json  sparse.css  wordleaves.css
evidence/pages/: +layout.svelte  404.md  index.md  wordleaves-theme.css
evidence/patches/: @evidence-dev+mssql+1.1.4.patch
evidence/scripts/: cdn-wasm.js  copy-404.js  fetch-sources.js
exports/: raw_measurements.parquet  raw_vocab.parquet  raw_works.parquet
infra/: budget.bicep  pipeline-automation.bicep
macros/: parse_primary_author.sql  zscore.sql
models/marts/: _exposures.yml  _marts.yml  dim_author.sql  dim_metric.sql  dim_work.sql  fact_style_measurement.sql  fact_vocab_overlap.sql  mart_style_long.sql  (+1 more)
notebooks/: nb_catalog_ingest.py  nb_strip.py  nb_text_ingest.py
scripts/: load_local_raw_tables.py  py_to_ipynb.py  strip_sample.py  upload_self_corpus.py
seeds/: seed_authors.csv
snapshots/: snapshots.yml
(+35 files in other folders)
