[project]
name = "gutenberg-fingerprint"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11.12",
    "dbt-duckdb>=1.10.1",
    "dbt-fabric>=1.10.0",
]

[dependency-groups]
dev = [
    "deltalake>=1.6.2",
    "en-core-web-sm",
    "polars>=1.42.1",
    "pyarrow>=25.0.0",
    "spacy>=3.8.14",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
